--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Ujikom Agate 1.sln"
+    "dotnet.defaultSolution": "khindyzharifanyfayyadhanafattah-ujikom.sln"
 }
