--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,11 +68,13 @@
     <Compile Include="Assets/Resources/Script/enemyHealthScript/dogHealth.cs" />
     <Compile Include="Assets/Resources/Script/mainMenuScript/SceneManagement.cs" />
     <Compile Include="Assets/Resources/Script/enemyHealthScript/cowHealth.cs" />
+    <Compile Include="Assets/Resources/Script/CameraChange.cs" />
     <Compile Include="Assets/Resources/Script/enemyHealthScript/horseHealth.cs" />
     <Compile Include="Assets/Resources/Script/PlayerController.cs" />
     <Compile Include="Assets/Resources/Script/FoodProjectile.cs" />
     <Compile Include="Assets/Resources/Script/enemyHealthScript/deerHealth.cs" />
     <Compile Include="Assets/Resources/Script/SpawnProjectile.cs" />
+    <Compile Include="Assets/Resources/Script/CountDownTime.cs" />
     <Compile Include="Assets/Resources/Script/TrashBackup/EnemyHealth2.cs" />
   </ItemGroup>
   <ItemGroup>
